# ai-hallucination

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  publish.sh  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
example/: langchain-example.js  package-lock.json  package.json  self-correction-example.js  server.js  sources.json
src/: index.ts
src/middleware/: express.ts
src/utils/: parser.ts  stream.ts
src/verifiers/: BaseVerifier.ts  FactualVerifier.ts  SymbolicVerifier.ts
tests/: factual.test.ts  parser.test.ts  stream.test.ts  symbolic.test.ts  zguard.test.ts
zguard-python/: README.md  pyproject.toml  requirements.txt
zguard-python/example/: crewai_example.py  self_correction_example.py  server.py
zguard-python/tests/: test_zguard.py
zguard-python/zguard/: __init__.py  cli.py  factual.py  gemini.py  middleware.py  parser.py  prompt.py  providers.py  stream.py  symbolic.py  types.py  verify.py
